[tool.poetry]
name = "dcmqtreepy"
version = "0.3.0"
description = "A PySide6 and pydicom based DICOM object editor"
authors = ["Stuart Swerdloff <sjswerdloff@gmail.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.7.2"
pydicom = "^2.4.4"
pynetdicom = "^2.1.0"
tomli = "^2.0.1"
streamlit = "^1.42.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
black = "^24.4.2"
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcmQTreePy = "dcmqtreepy.dcmQTree:main"
